--- a/module-1/02-Attributes/Unsolved/index.html
+++ b/module-1/02-Attributes/Unsolved/index.html
@@ -4,7 +4,6 @@
   <head>
     <meta charset="UTF-8">
     <title>Student Bio With Attributes</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
 
   <body>
@@ -14,21 +13,22 @@
 
     <!-- Class attribute with name "section" -->
     <section class="section">
-      <h2>Nate Svoboda</h2>
-      <img src="./assets/images/image-1.jpg" alt="Nate's Photo">
+      <h2>Your Name</h2>
+      <img value="image-1.jpg">
       <p>Write a short paragraph or two about yourself</p>
     </section>
     
     <!--Class attribute with name "section"-->
-    <footer>
+    <section class="section">
       <h2 class="headers">Contact Info</h2>
       <ul>
         <!--Anchor tags using href to link to external website-->
         <!--id attributes to provide unique identifier for element-->
-        <li id="email"><strong>Email:</strong> <a href="#">natesvoboda64@gmail.com</a></li>
-        <li id="github"><strong>GitHub:</strong> <a href="#">nsvoboda</a></li>
+        <li id="email"><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
+        <li id="github"><strong>GitHub:</strong> <a href="#">sampleName</a></li>
         <li id="portfolio"><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
       </ul>
-    </footer>
+    </section>
   </body>
+
 </html>
