--- a/module-2/04-Pseudo-Classes/Unsolved/index.html
+++ b/module-2/04-Pseudo-Classes/Unsolved/index.html
@@ -56,6 +56,20 @@
           </div>
           <div class="resources">
             <!-- TODO: Add resource links -->
+            <h3>
+              Show Resources
+            </h3>
+            <ul class="links">
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Responsive_Design" target="_blank">MDN web docs on responsive design</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries" target="_blank">MDN web docs on using media queries</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox" target="_blank">MDN web docs on flexbox</a>
+              </li>
+            </ul>
           </div>
         </article>
       </section>
